# wasm-cppjieba

./: .gitignore  CMakeLists.txt  LICENSE  README.md  exec.sh  index.html  package-lock.json  package.json
demo/: helper.js  index.html
script/: build-cppjieba.sh  build-dicts-idbfs.sh
src/: dicts-idbfs.c  wasm-cppjieba-library.js  wasm-cppjieba-pre.js  wasm-cppjieba.cpp
